--- a/Code/PersonalPhotos/appsettings.json
+++ b/Code/PersonalPhotos/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "Default": "Server=localhost\\SQLEXPRESS; Database=xUnitCourseByAref; Integrated Security=True;Encrypt=False;"
+    "Default": "Server=ANKITA-GUHA; Database=xUnitCourseByAref; Integrated Security=True;Encrypt=False;"
   },
   "Logging": {
     "LogLevel": {
