--- a/Code/PersonalPhotos.Test/PersonalPhotos.Test.csproj
+++ b/Code/PersonalPhotos.Test/PersonalPhotos.Test.csproj
@@ -27,6 +27,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.3.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.3.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="18.0.0" />
     <PackageReference Include="Microsoft.Testing.Platform" Version="1.9.0" />
     <PackageReference Include="Moq" Version="4.20.72" />
